# hermes-taskboard

./: .gitignore  CHANGELOG.ja-JP.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum  release.sh
cmd/hermesprobe/: main.go
cmd/pluginprobe/: main.go
cmd/taskboard/: main.go
docs/: manual.en.md  manual.zh-CN.md  requirements.ja-JP.md  requirements.md  smoke.ja-JP.sh  smoke.sh
docs/release-notes/: v0.1.0.ja-JP.md  v0.1.0.md
docs/research/: hermes-plugin-feasibility.md  plugin-prototype-plan.md
internal/attempt/: resumer.go  runner.go  runner_cancel_chain_test.go  runner_plugin.go  runner_real_hermes_test.go  runner_restart_resume_test.go  runner_single_profile_test.go
internal/auth/: auth.go
internal/board/: board.go
internal/config/: config.go
internal/cron/: worker.go  worker_tz_test.go
internal/hermes/: client.go  plugin_server.go
internal/migrate/: aead.go  migrate.go
internal/reaper/: reaper.go
internal/scheduler/: scheduler.go
internal/server/: handlers.go  plugin_handlers.go  server.go  users.go
internal/sse/: hub.go
internal/store/: cache.go  manager.go  model.go  store.go
internal/store/fsstore/: fsstore.go  manager.go
internal/store/sqlite/: sqlite.go  util.go
internal/uploads/: uploads.go
internal/userdir/: aead.go  tags.go  userdir.go
internal/webfs/: webfs.go
internal/webfs/web/: index.html  sw.js  (+1 more)
plugin/: Dockerfile  README.md  pyproject.toml
plugin/src/hermes_taskboard_bridge/: __init__.py  adapter.py  entry.py  runtime.py
tests/: ui_test.py
(+21 files in other folders)
